# Game-of-Life

./: .gitignore  CMakeLists.txt  GameOfLife  cell.cpp  compile.sh  game.cpp  game_of_life  grid.cpp  grid.h  renderer_sfml.cpp  renderer_sfml.h  sonar-project.properties
.github/workflows/: sonarcloud.yml
include/: cell.h  grid.h
src/: game.cpp  grid.cpp
